# matsuzawa-20260122-2

./: package-lock.json  pyproject.toml
.github/workflows/: dev_compile_latex_with_open_code.yml  dev_run_evaluation_with_open_code.yml  dev_run_trial_experiment_with_open_code.yml
.research/: research_history.json
.research/latex/iclr2024/: main.tex
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-1-resnet18-cifar10/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-resnet18-cifar10/: metrics.json
config/: config.yaml
config/runs/: comparative-1-resnet18-cifar10.yaml  proposed-resnet18-cifar10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
